k8s-manifests/overlays/bog-prd/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: "image-registry.openshift-image-registry.svc:5000/bog-prd/java-app:latest"
          ports:
            - containerPort: 8080
